@@ -9,10 +9,21 @@ import org.springframework.stereotype.Service;
 @Service
 public class ProductService {
 
-    List<Product> products = List.of(new Product(101, "Iphone", 40000));
+    List<Product> products = new ArrayList<>(Arrays.asList(new Product(101, "Iphone", 40000)));
 
     public List<Product> getProducts() {
         return products;
+    }
+
+    public Product getProductById(int id) {
+        return products.stream()
+                .filter(p -> p.getProdId() == id)
+                .findFirst()
+                .orElse(new Product(100,"No item", 0));
+    }
+
+    public void addProduct(Product product) {
+        products.add(product);
     }
 
 }
